Fix device text alignment when missing link icon (#2601)

--- a/files/app/resource/css/user.css
+++ b/files/app/resource/css/user.css
@@ -508,6 +508,7 @@ body.authenticated .ctrl:hover
     font-size: calc(var(--font-base-size) - 3px);
     padding: 2px 0;
     flex-basis: 50%;
+    align-content: center;
 }
 #services .service .status
 {
